fix: rewrite list.of syntax